# Slavikai

./: .gitignore  AGENTS.md  AGENT_MINIPROMPTS.md  ARCH_GAP_ANALYSIS.md  Architecture.md  CLAUDE.md  COMMANDS.md  CONTRIBUTING.md  DevRules.md  E2E_SCENARIOS.md  GEMENI.md  MEMORY_COMPANION_MINIPROMPTS.md  MIGRATION_MWV_PLAN.md  Makefile  Note.md  PROJECT_OVERVIEW.md  constraints.txt  project.txt  project2txt.sh  pyproject.toml  requirements.in  requirements.txt  setup.py  slavik_ui_pr_roadmap.md  updated_roadmap.md  zadumka.md
.github/: dependabot.yml
config/: http_server_config.py  memory_config.py  mode.json  mode_config.py  model_store.py  model_whitelist.py  settings.py  shell_config.json  shell_config.py  skills_config.py  stt_config.py  system_prompts.py  tools_config.py  tts_config.py  ui_embeddings_settings.py  web_search_api_key.txt  web_search_config.py
core/: agent.py  agent_mwv.py  agent_routing.py  agent_tools.py  approval_policy.py  auto_agent.py  auto_runtime.py  batch_review.py  critic_policy.py  executor.py  intent_paradox.py  planner.py  planner.pyi  rule_engine.py  tool_gateway.py  tracer.py
docs/: ARCH_CANON.md  Architecture.md  COMMANDS.md  COMMAND_LANE_POLICY.md  CONTRIBUTING.md  DEPLOYMENT.md  DevRules.md  LEGACY_SURFACE_MAP.md  LIFECYCLE.md  M4_WIRING_NOTES.md  M5_MWV_HARDENING.md  MAP.md  MWV_CANONICAL_FLOW.md  MWV_FLOW.md  PHASE_3_IMPLEMENTATION.md  PHASE_4_DUALBRAIN.md  PHASE_5_SAFE_MODE.md  PROJECT_OVERVIEW.md  ROUTING_POLICY.md  RUNTIME_MWV_FLOW.md  STOP_RESPONSES.md  TEST_TAXONOMY.md  dev_workflow.md  merge_process.md  ui_consolidation_inventory.md
llm/: brain_base.py  brain_factory.py  brain_manager.py  dual_brain.py  inception_brain.py  local_http_brain.py  openrouter_brain.py  (+2 more)
(+389 files in other folders)
